force-app/main/default/objects/PgM_Deliverable__c/PgM_Deliverable__c.object-meta.xml
<CustomObject>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>