force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>PgM_Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>