force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>