force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>PgM_Lifecycle__c</fullName>
    <label>Approval Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Yet Submitted</fullName>
                <default>true</default>
                <label>Not Yet Submitted</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>