force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>PgM_Mitigation__c</fullName>
    <label>Mitigation / Resolution / Dependencies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>