force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>PgM_Planned_Date__c</fullName>
    <label>Planned Completion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>