force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>PgM_Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>