force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Program__c.field-meta.xml
<CustomField>
    <fullName>PgM_Program__c</fullName>
    <label>Program</label>
    <referenceTo>PgM_Program__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>