force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Rating__c.field-meta.xml
<CustomField>
    <fullName>PgM_Rating__c</fullName>
    <label>Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PgM_RAG</valueSetName>
    </valueSet>
</CustomField>