force-app/main/default/objects/PgM_Deliverable__c/fields/PgM_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Running Late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>