force-app/main/default/objects/PgM_Deliverable__c/recordTypes/Deliverable.recordType-meta.xml
<RecordType>
    <fullName>Deliverable</fullName>
    <active>true</active>
    <label>Deliverable</label>
</RecordType>