force-app/main/default/objects/PgM_Deliverable__c/validationRules/Deliverable_is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Deliverable_is_Locked</fullName>
    <active>true</active>
    <description>Prevents edits to Deliverable records that have been Approved and Locked</description>
    <errorConditionFormula>(ISCHANGED( PgM_Acceptance_Criteria__c ) || 
 ISCHANGED( PgM_Actual_Date__c ) || 
 ISCHANGED( PgM_Lifecycle__c ) || 
 ISCHANGED( PgM_Approved_Date__c ) || 
 ISCHANGED( PgM_Approver__c ) || 
 ISCHANGED( Name ) || 
 ISCHANGED( PgM_Description__c ) || 
 ISCHANGED( PgM_Mitigation__c ) || 
 ISCHANGED( PgM_Planned_Date__c ) || 
 ISCHANGED( PgM_Primary_Owner__c ) || 
 ISCHANGED( PgM_Program__c ) || 
 ISCHANGED( PgM_Rating__c ) || 
 ISCHANGED( RecordTypeId ) || 
 ISCHANGED( PgM_Status__c ) || 
 ISCHANGED( PgM_Submitter__c )) &amp;&amp; 
 PgM_Record_Locked__c = true &amp;&amp;
 ISPICKVAL( PgM_Lifecycle__c , &apos;Approved&apos;)</errorConditionFormula>
    <errorMessage>The Deliverable has been approved and the record is locked.</errorMessage>
</ValidationRule>