force-app/main/default/objects/PgM_Deliverable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Planned_Date__c</columns>
    <columns>PgM_Program__c</columns>
    <columns>PgM_Status__c</columns>
    <columns>PgM_Lifecycle__c</columns>
    <columns>PgM_Approved_Date__c</columns>
    <columns>PgM_Rating_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>